[gd_scene load_steps=2 format=3 uid="uid://ivbohh1fxwuf"]

[ext_resource type="Script" path="res://Scene/invader_spawner.gd" id="1_p6q3u"]

[node name="InvaderSpawner" type="Node2D"]
position = Vector2(0, -190)
script = ExtResource("1_p6q3u")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShotTime" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTime" to="." method="_on_shot_time_timeout"]
